syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message SaveCollectionToRecipeBookRequest {
  string userId = 1;
  string collectionId = 2;
  optional string contributorKey = 3;
}

message SaveCollectionToRecipeBookResponse {
  string message = 1;
}

message RemoveCollectionFromRecipeBookRequest {
  string userId = 1;
  string collectionId = 2;
}

message RemoveCollectionFromRecipeBookResponse {
  string message = 1;
}
